tdf#93246: pass on cancel state in mail merge dialog

The return result was not used for the CUPS case before, leading to
un-cancelled printing / document generation in the file->print
mail merge case.

Change-Id: I470293755c6696fca6d1b97fa1dac7854b4f7107
Reviewed-on: https://gerrit.libreoffice.org/18302
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-on: https://gerrit.libreoffice.org/18329
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>