sw/source/uibase/dbui/dbmgr.cxx
@@ -1244,12 +1244,13 @@ bool SwDBManager::MergeMailFiles(SwWrtShell* pSourceShell,
                                 pWorkView->StartPrint( aOptions, IsMergeSilent(), rMergeDescriptor.bPrintAsync );
                                 SfxPrinter* pDocPrt = pWorkView->GetPrinter(false);
                                 JobSetup aJobSetup = pDocPrt ? pDocPrt->GetJobSetup() : SfxViewShell::GetJobSetup();
-                                Printer::PreparePrintJob( pWorkView->GetPrinterController(), aJobSetup );
+                                bCancel = !Printer::PreparePrintJob( pWorkView->GetPrinterController(), aJobSetup );
 #if ENABLE_CUPS && !defined(MACOSX)
-                                psp::PrinterInfoManager::get().startBatchPrint();
+                                if( !bCancel )
+                                    psp::PrinterInfoManager::get().startBatchPrint();
 #endif
                             }
-                            if( !Printer::ExecutePrintJob( pWorkView->GetPrinterController()))
+                            if( !bCancel && !Printer::ExecutePrintJob( pWorkView->GetPrinterController()))
                                 bCancel = true;
                         }
                         else
